# UrnBasedDynamicNetworkModel

./: .JuliaFormatter.toml  .gitignore  Manifest.toml  Project.toml  README-en.md  README.md  png2mp4.sh  pyproject.toml
data/: aps.csv  twitter.csv
python/: agent_history.py  hashimoto_like.ipynb  make_tree_graph.py  make_tree_graph_animation.py  novelty.ipynb  parameter_map.ipynb  params_and_novelty.ipynb  plot_weights.py  temp.ipynb  temp.py  temp2.py  temp3.ipynb  triangle.py
src/: 2022-08-22.jl  AROB_Models.jl  Calc.jl  Classification.jl  Models.jl  Newick.jl  PlotUtils.jl  Tree.jl  Twitter.jl  Utils.jl  Visualize.jl
src/tasks/: AnalyzeAgentHIstory.jl  AnalyzeBirthstep.jl  AnalyzeClassification.jl  AnalyzeHistories.jl  AnalyzeHistory_10times.jl  AnalyzeModels.jl  AnalyzeModelsV2.jl  AnalyzeTargets.jl  AnalyzeZetaEtaRatio.jl  CalcDiffs.jl  ExportNestfitMinRLabelWithHistory.jl  MergeAnalyzedGeneratedHistories.jl  PlotAnalyzedClassification.jl  PlotFunction.jl  PlotGraphs.jl  PlotNoveltyTrend.jl  PreprocessingAPS.jl  RunBaseModel.jl  RunModel.jl  RunModel_10times.jl  RunNormalModel.jl  RunPgbkModel.jl  Temp.jl  ZetaEtaRatio.jl
