[tool.poetry]
name = "arob2023"
version = "0.1.0"
description = ""
authors = ["SUDA Mikihiro <s@sudame.net>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
black = "^22.6.0"
ipykernel = "^6.15.1"
tqdm = "^4.64.1"
seaborn = "^0.12.1"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
